copy retail contents from develop to maintenance/3.2

--- a/adoc/book_retail_getting_started.adoc
+++ b/adoc/book_retail_getting_started.adoc
@@ -1,5 +1,6 @@
 [[retail]]
-= Getting Started with {smr}
+= Getting Started with SUSE Manager for Retail
+
 include::entities.adoc[]
 
 include::retail_chap_introduction.adoc[leveloffset=1]
@@ -8,6 +9,10 @@ include::retail_chap_components.adoc[leveloffset=1]
 
 include::retail_chap_install.adoc[leveloffset=1]
 
+include::retail_chap_formulas.adoc[leveloffset=1]
+
 include::retail_chap_admin.adoc[leveloffset=1]
 
 include::retail_chap_next.adoc[leveloffset=1]
+
+include::common_legal.adoc[leveloffset=1]
