--- a/adoc/retail_chap_next.adoc
+++ b/adoc/retail_chap_next.adoc
@@ -1,15 +1,17 @@
 [[retail.chap.next]]
-= What Next?
+= What next?
 
 include::entities.adoc[]
 
 
 
 [[retail.sect.next]]
-== What Next?
+== What next?
 
 This document covers only a sub-section of information about your {smr} installation.
 If you need further information or support, try one of these options.
+
+
 
 [[retail.sect.next.docs]]
 === More documentation
@@ -19,7 +21,11 @@ For {susemgr} documentation, visit https://www.suse.com/documentation/suse-manag
 For legacy {slepos} documentation, visit https://www.suse.com/documentation/slepos11/index.html
 Note, however, that {smr} documentation supersedes this information.
 
+
+
 [[retail.sect.next.support]]
 === Support
 
 For personalized support, log in to your {scc} account here: https://scc.suse.com/login
+
+For assistance with planning and installing your {smr} environment, contact the SUSE Consulting team.
