--- a/adoc/retail_salt_formulas.adoc
+++ b/adoc/retail_salt_formulas.adoc
@@ -70,8 +70,9 @@ Then you configure one or more partitions:
 image::formula-saltboot-02.png[]
 
 
-////
-////
+In the Saltboot formula settings, configure either the [systemitem]``filesystem`` parameter, or the [systemitem]``image`` parameter, not both.
+If the [systemitem]``filesystem`` and [systemitem]``image`` fields both contain values, the [systemitem]``filesystem`` parameter will be ignored and the [systemitem]``image`` field settings will be used.
+
 
 
 [[retail.formulas.image-sync]]
