--- a/adoc/retail_chap_components.adoc
+++ b/adoc/retail_chap_components.adoc
@@ -4,68 +4,85 @@
 include::entities.adoc[]
 
 
-
 [[retail.sect.components]]
 == Components
 
 
 {smr} uses a layered architecture:
 
-* The first layer contains the central server and one or more build hosts.
+* The first layer contains the {susemgr} server and one or more build hosts.
 * The second layer contains one or more branch servers to provide local network and boot services.
-* The final layer contains any number of deployed point-of-sale terminals.
+* The final layer contains any number of deployed point-of-service terminals.
+
+image::retail_ref_arch.png[scaledwidth=80%]
+
+
 
 [[retail.sect.components.central-server]]
-=== Central Server
+=== {susemgr} Server
 
-The central server is a {susemgr} server.
-It contains information about infrastructure, network topology, and everything required to automate image deployment and perform day-to-day operations of branches and terminals.
-This can include database entries of registered systems, salt pillar data for build images, image assignments, partitioning, network setup, network services, and more.
+The {susemgr} server contains information about infrastructure, network topology, and everything required to automate image deployment and perform day-to-day operations on branches and terminals.
+This can include database entries of registered systems, Salt pillar data for images, image assignments, partitioning, network setup, network services, and more.
+
+
 
 [[retail.sect.components.build-hosts]]
 === Build Hosts
 
 Build hosts can be arbitrary servers or virtual machines.
 They are used to securely build operating system images.
-Build hosts should be based on {sls}{nbsp}12 SP{nbsp}3.
+Build hosts should be based on {sls}{nbsp}12 SP3.
+
+
 
 [[retail.sect.components.branch-server]]
 === Branch Server
 
-Branch servers should be physically located close to point-of-sale terminals, such as in an individual store or branch office.
-Branch servers provide services for PXE boot, and act as an image cache, salt broker, and RPM proxy.
-Depending on how you configure your branch server, it can also manage local networking, and provide DHCP and DNS services.
+Branch servers should be physically located close to point-of-service terminals, such as in an individual store or branch office.
+We recommend you have a fast network connection between the branch server and its terminals.
+Branch servers provide services for PXE boot, and act as an image cache, Salt broker, and proxy for software components (RPM packages).
+The branch server can also manage local networking, and provide DHCP and DNS services.
 
-The branch server layer can operate in several different network configurations:
+The branch server can operate in several different network configurations:
 
 * The branch server has a dedicated network interface card and terminals use an isolated internal branch network.
-* The branch server manages the internal network and provides DHCP, DNS, PXE, FTP, and TFTP services.
-* The branch server shares a network with the terminals, and provides a connection to the central server.
-* The branch server does not manage a network, but acts as a PXE boot server and provides FTP and TFTP services.
-In this configuration, it may or may not provide DHCP and DNS services.
+  In this configuration, the branch server manages the internal network and provides DHCP, DNS, PXE, FTP, and TFTP services.
+* The branch server shares a network with the terminals, and provides a connection to the {susemgr} server.
+  In this configuration, the branch server is not required to manage a network (DHCP and DNS services), but acts as a PXE boot server and provides FTP and TFTP services.
+
+For more information on {smr} Branch servers, see documentation on {susemgr} Proxy servers.
 
 [[retail.sect.components.pos-terminals]]
-=== Point-of-Sale Terminals
+=== Point-of-Service Terminals
 
-Point-of-sale (PoS) terminals can come in many different formats, such as cashier terminals, digital scales, or cash drawers.
-Every terminal, however, is provided by a vendor, who set some basic information about the device in the firmware.
-{smr} accesses this vendor information in order to determine how best to work with the terminal in use.
+Point-of-Service (PoS) terminals can come in many different formats, such as point-of-sale terminals, kiosks, digital scales, self-service systems, and reverse-vending systems.
+Every terminal, however, is provided by a vendor, who set basic information about the device in the firmware.
+{smr} accesses this vendor information to determine how best to work with the terminal in use.
+
 In most cases, different terminals will require a different operating system (OS) image to ensure they work correctly.
-For example, a cashier terminal has a full graphical display, where a digital scale might only have a very basic text display.
+For example, an information kiosk has a high-resolution touchscreen, where a cashier terminal might only have a very basic display.
 While both of these terminals require similar processing and network functionality, they will require different OS images to ensure that the different display mechanisms work correctly.
 
+The minimum memory requirement is 1024 MB for hosts that need to run OS images built with Kiwi (PXE booted or not)
+
+*Hardware Requirements for PoS Terminals:*
+. At least 1 GB of RAM.
+For more information, see the documentation of the underlying system (in this case: {sls}{nbsp}12).
+. Enough disk space depending on the image size.
+
+For more information on {smr} PoS terminals, see documentation on {susemgr} Salt clients.
 
 
 [[retail.sect.components.fitting]]
 == Fitting it all together
 
 
-{smr} uses the same underlying technology as {susemgr}, but specifically addresses the needs of retail organizations.
+{smr} uses the same technology as {susemgr}, but is customized to address the needs of retail organizations.
 
 
 
 [[retail.sect.components.fitting.hardware-types]]
-=== Hardware Types
+=== Hardware types
 Because every environment is different, and can contain many different configurations of many different terminals, {smr} uses hardware types to simplify device management.
 
 Hardware types allow you to group devices according to manufacturer and device name, so that all devices of a particular type can be managed as one.
@@ -73,24 +90,24 @@ Hardware types allow you to group devices according to manufacturer and device n
 
 
 [[retail.sect.components.fitting.formulas]]
-=== Formulas
+=== Salt formulas
 
-{smr} uses formulas to help simplify configuration.
-Formulas are pre-written scripts, that are used to configure your installation.
+{smr} uses Salt formulas to help simplify configuration.
+Formulas are pre-written Salt states, that are used to configure your installation.
 
 You can use formulas to apply configuration patterns to your hardware groups.
 {smr} uses the Saltboot formula, which defines partitioning and OS images for terminals.
 
 You can use default settings for formulas, or edit them to make them more specific to your environment.
 
+Formulas are discussed in more detail in this guide, at xref:retail_chap_formulas.adoc#retail.chap.formulas[Formulas Chapter].
+
 
 
 [[retail.sect.components.fitting.system-groups]]
-=== System Groups
+=== System groups
 
 {smr} uses system groups to organize the various devices in your environment.
 
-You can create your own system groups using the {susemgr} {webui}.
-Navigate to menu:Systems[System Groups] and click on [btn]``+ Create System Group``.
-
-We suggest you create a system group for each branch, containing a single branch server, and the PoS terminals associated with that server.
+Each branch requires a system group, containing a single branch server, and the PoS terminals associated with that server.
+Each system group is identified with a Branch ID, which is used in formulas and scripts to automatically update the entire group.
