--- a/adoc/retail_migr_chap_introduction.adoc
+++ b/adoc/retail_migr_chap_introduction.adoc
@@ -1,10 +1,10 @@
-[[retail.chap.introduction]]
+[[retail_migr.chap.introduction]]
 = Introduction
 
 include::entities.adoc[]
 
 
-[[retail.sect.intro.what]]
+[[retail_migr.sect.intro.what]]
 == What is {smr}?
 
 {smr} {productnumber} is an open source infrastructure management solution, optimized and tailored specifically for the retail industry.
@@ -17,23 +17,10 @@ In addition to retail installations, it can also be used for novel purposes, suc
 It allows administrators to install, configure, and update the software on their servers, and manage the deployment and provisioning of point-of-service machines.
 
 
-[IMPORTANT]
-====
-Migrating configuration from {slepos} to {smr} is a technology preview and will be enhanced in future releases of {susemgr}.
-====
-
 
 [[retail.sect.intro.book]]
 == About this book
 
-This document provides an overview of {smr}, and guides you through initial installation and setup.
-It should be read in conjunction with the {susemgr} documentation suite, available from https://www.suse.com/documentation/suse-manager-3/
+This document provides instructions for migrating {slepos} 11 or {smr} 3.1 to {smr} {smrproductnumber}.
 
-For more information about managing your {smr} environment, or to find out where to get help, see https://www.suse.com/documentation/suse-manager-for-retail-3-2/retail-getting-started/retail.chap.next.html
-
-////
-[[retail.sect.intro.architecture]]
-== Architecture
-
-TODO: Import https://www.suse.com/documentation/suse-manager-for-retail-3-1/book_susemanager_retail/data/sec_overview_architecture.html here
-////
+It should be read in conjunction with the {smr} documentation suite, available from https://www.suse.com/documentation/suse-manager-for-retail/.
